; ModuleID = '/home/carl/AnghaBench/vlc/modules/gui/extr_ncurses.c_playlist_on_items_updated.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/gui/extr_ncurses.c_playlist_on_items_updated.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i32**, i64, i8*)* @playlist_on_items_updated to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @playlist_on_items_updated(i32* %0, i64 %1, i32** %2, i64 %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32** %2, i32*** %8, align 8
  store i64 %3, i64* %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = ptrtoint i32* %11 to i64
  %13 = call i32 @VLC_UNUSED(i64 %12)
  %14 = load i64, i64* %7, align 8
  %15 = call i32 @VLC_UNUSED(i64 %14)
  %16 = load i32**, i32*** %8, align 8
  %17 = ptrtoint i32** %16 to i64
  %18 = call i32 @VLC_UNUSED(i64 %17)
  %19 = load i64, i64* %9, align 8
  %20 = call i32 @VLC_UNUSED(i64 %19)
  %21 = load i8*, i8** %10, align 8
  %22 = bitcast i8* %21 to %struct.TYPE_2__*
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  store i32 1, i32* %23, align 4
  ret void
}

declare dso_local i32 @VLC_UNUSED(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
